<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">studentstatus</string>
    <string name="action_settings">Settings</string>
    
    <string name="Home_TopTitle">学籍管理系统</string>
    <string name="home">首页</string>
    <string name="Shop">商城</string>
    <string name="my">我的</string>
   
    <!-- gridview -->
    <string name="Home_Gridview_GPS">学生定位</string>
    <string name="Home_Gridview_work">作业</string>
    <string name="Home_Gridview_score">成绩</string>
    <string name="Home_Gridview_evaluation">评价</string>
    <string name="Home_Gridview_attendance">学生考勤</string>
    <string name="Home_Gridview_interactive">家校互动</string>
    <string name="Home_Gridview_inform">通知</string>
    <string name="Home_Gridview_informdesc">通知详情</string>
    <!-- my -->
    <string name="My_setting">设置</string>
    <string name="My_myself">关于我们</string>
    <string name="My_order">我的订单</string>
    <string name="My_advice">意见反馈</string>
    <string name="My_interbook">我的通讯录</string>
    <!-- regist --> 
    <string name="regist">注册</string>
    <string name="parents">家长信息</string>
    <string name="student">学生信息</string>
    
     <string name="title_activity_evaluation">EvaluationActivity</string>
    
    
    <string name="pingjia">评价</string>
    <string name="chengji">成绩</string>
    <string name="pingjialaoshi">评价老师</string>
    <string name="qupingjia">去评价</string>
    <string name="kaoqin">考勤</string>
    <string name="name">姓名</string>
    <string name="number">学号</string>
    <string name="classes">班级</string>
    
    
    
    <string name="title_activity_score">ScoreActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_test_score">TestScoreActivity</string>

</resources>
