<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_zhengwen" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/whiteline" />

    <TextView
        android:id="@+id/txt_class"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:gravity="center"
        android:text="@string/classes"
       android:textColor="@color/black"
         android:textSize="@dimen/textsize_zhengwen" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/whiteline" />

    <TextView
        android:id="@+id/txt_number"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:gravity="center"
        android:text="@string/number"
        android:textColor="@color/black"
         android:textSize="@dimen/textsize_zhengwen" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/whiteline" />

    <TextView
        android:id="@+id/txt_attendance"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:gravity="center"
        android:text="@string/kaoqin"
        android:textColor="@color/black"
         android:textSize="@dimen/textsize_zhengwen"/>

</LinearLayout>